--- a/css/header.css
+++ b/css/header.css
@@ -168,7 +168,7 @@
     border-radius: 7px;
   }
 
-    .header-text h1 {
+    .header-text p {
         font-size: 0.9rem;
         line-height: 1.1;
     }
